--- a/AceGrading/RosterManagement.xaml
+++ b/AceGrading/RosterManagement.xaml
@@ -21,7 +21,6 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="Classes" VerticalAlignment="Center"/>
-                <Button HorizontalAlignment="Right" Style="{DynamicResource BlueTextBtn}" Content="Edit" VerticalAlignment="Center" Click="EditClass_Click"/>
                 <Ellipse Width="{DynamicResource LargeProfilePic}" Fill="{DynamicResource RoyalSeaBlue}" Height="{DynamicResource LargeProfilePic}" Grid.Row="1" Grid.RowSpan="2"/>
 
                 <TextBlock Text="{Binding SelectedClass.Class_Initials}" Grid.Row="1" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="60" Foreground="White"/>
@@ -33,14 +32,15 @@
                     </DockPanel>
                 </StackPanel>
 
-                <Grid Grid.Row="4" Margin="0,10,0,0">
+                <Grid Grid.Row="4" Margin="0,10,0,0" VerticalAlignment="Top">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="25"/>
                         <RowDefinition/>
-                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="{StaticResource SmallGridDim}"/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="Switch Class" VerticalAlignment="Center"/>
-                    <ListBox Name="classListbx" Grid.Row="1" Background="Transparent" BorderBrush="{x:Null}" 
+                    <Button HorizontalAlignment="Right" Style="{DynamicResource BlueTextBtn}" Content="View Class" VerticalAlignment="Center" Click="EditClass_Click"/>
+                    <ListBox Name="classListbx" Background="Transparent" BorderBrush="{x:Null}" Grid.Row="1"
                              ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalContentAlignment="Stretch" 
                              ItemsSource="{Binding Classes}" SelectedItem="{Binding SelectedClass}">                   
                         <ListBox.ItemTemplate>
@@ -57,7 +57,7 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                    <Button Content="Create Class" Grid.Row="2" HorizontalAlignment="Right" Style="{DynamicResource BlueTextBtn}" Command="{Binding PreAddClass}" VerticalAlignment="Center" Click="AddNewClass_Click"/>
+                    <Button Content="Create Class" Grid.Row="2" HorizontalAlignment="Center" Style="{DynamicResource BlueTextBtn}" Command="{Binding PreAddClass}" VerticalAlignment="Center" Margin="0,5,0,0" Click="AddNewClass_Click"/>
                 </Grid>
             </Grid>
 
@@ -78,11 +78,11 @@
 
             <Grid Name="EditClassProfileGrid" Visibility="Hidden" Background="{Binding ElementName=Grid1, Path=Background}">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="{DynamicResource SquareDim}"/>
-                    <RowDefinition Height="{DynamicResource SquareDim}"/>
-                    <RowDefinition Height="{DynamicResource SquareDim}"/>
-                    <RowDefinition Height="{DynamicResource SquareDim}"/>
-                    <RowDefinition Height="{DynamicResource SmallGridDim}"/>
+                    <RowDefinition Height="{StaticResource SquareDim}"/>
+                    <RowDefinition Height="{StaticResource SquareDim}"/>
+                    <RowDefinition Height="{StaticResource SquareDim}"/>
+                    <RowDefinition Height="{StaticResource SquareDim}"/>
+                    <RowDefinition Height="{StaticResource SmallGridDim}"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Text="Edit Class" VerticalAlignment="Center"/>
@@ -95,18 +95,17 @@
                     <Rectangle Height="2" Margin="2" Fill="{DynamicResource MediumGray}"/>
                 </StackPanel>
                 <Button Grid.Row="4" Content="Delete Class" Style="{StaticResource RedTextBtn}" Command="{Binding DeleteClass}" Click="DeleteClass_Click"/>
-                <Grid Grid.Row="5" Margin="0,10,0,0">
+                <Grid Grid.Row="5" Margin="0,10,0,0" VerticalAlignment="Top">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="25"/>
                         <RowDefinition/>
-                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="{StaticResource SmallGridDim}"/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="Students" VerticalAlignment="Center"/>
-                    <Button Content="Edit Student" Style="{StaticResource BlueTextBtn}" HorizontalAlignment="Right" Click="EditStudent_Click"/>
+                    <Button Content="Edit Student" Style="{StaticResource BlueTextBtn}" HorizontalAlignment="Right" Click="EditStudent_Click" Command="{Binding SelectedClass.SelectedStudentNotNull}" CommandParameter="{Binding SelectedClass.SelectedStudent}"/>
                     <ListBox Name="studentListbx" Grid.Row="1" Background="Transparent" BorderBrush="{x:Null}" 
-                             ScrollViewer.VerticalScrollBarVisibility="Auto" 
-                             HorizontalContentAlignment="Stretch"
                              SelectedItem="{Binding SelectedClass.SelectedStudent}"
+                             ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalContentAlignment="Stretch" 
                              ItemsSource="{Binding SelectedClass.Students}">                   
                         <ListBox.ItemTemplate>
                             <DataTemplate>
@@ -122,7 +121,7 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                    <Button Grid.Row="2" Content="Add Student" Style="{DynamicResource BlueTextBtn}" HorizontalAlignment="Right" VerticalAlignment="Center" Click="AddStudent_Click"/>
+                    <Button Grid.Row="2" Content="Add Student" Style="{DynamicResource BlueTextBtn}" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Center" Click="AddStudent_Click"/>
                 </Grid>
             </Grid>
 
@@ -226,11 +225,16 @@
                                 </Grid>
                                 <StackPanel Grid.Column="1" Margin="2,2,0,0" VerticalAlignment="Center">
                                     <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition/>
+                                            <ColumnDefinition Width="35"/>
+                                        </Grid.ColumnDefinitions>
                                         <TextBox Text="{Binding SelectedClass.NewStudent.StudentName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Grid.Row="1" SelectionBrush="{DynamicResource SeaBlue}">
                                             <TextBox.InputBindings>
                                                 <KeyBinding Key="Enter" Command="{Binding SelectedClass.AddStudent}"/>
                                             </TextBox.InputBindings>
                                         </TextBox>
+                                        <Button Content="Add" HorizontalAlignment="Center" Grid.Column="1" Style="{DynamicResource BlueTextBtn}" Command="{Binding SelectedClass.AddStudent}"/>
                                     </Grid>
                                     <Rectangle Height="2" Margin="2" Fill="{DynamicResource MediumGray}"/>
                                 </StackPanel>
